    - new arguments to modify layout ('cex.text', 'col.text', pch,
      cex.points, col.points)
    
  * decomp.design() and netmeasures():
    - new argument 'warn' to suppress printing of warnings

 ** Internal changes **

  * New internal function upgradenetmeta() to add missing list
    elements to older netmeta objects

  * R function ci() from R package meta added to namespace

  * Additional check for negative variances in chkmultiarm()


*** netmeta, version 0.9-5, 2017-05-31 ***

 ** Major changes **

  * New function netleague() to print league table with network
    meta-analysis results

  * pairwise():
    - zero events for binary outcomes or incidence rates are handled
      correctly in multi-arm studies by adding an increment to all
      treatment arms (in older versions of netmeta inconsistent
      treatment effects for multi-arm studies were possible as
      increments were considered in individual comparisons instead of
      all comparisons for a multi-arm study)
    - print warning and information on treatment comparisons with
      missing treatment estimate or standard error

  * forest.netmeta():
    - reference group can be omitted from forest plot
    - treatments can be sorted by treatment estimate (TE), standard
      error (seTE), number of studies in direct comparison (k), and
      proportion of direct information (prop.direct)

  * netmeta():
    - additional checks for correct number of comparisons in multi-arm
      studies and more informative error message for uncorrect number
      of comparisons in multi-arm studies due to missing treatment
      effects or standard errors in single comparisons
    - separator used in comparison names to concatenate treatment
      labels can be specified by user (default: ":")

  * In decomp.design(), by default, only print designs contributing to
    design-specific decomposition of within-designs Q statistic

  * Input to netdistance() can be either a netmeta object or a matrix
